--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -82,7 +82,7 @@ ptm <- proc.time()
 
 ```{r parameters, echo=FALSE, results=FALSE, warning=FALSE, message=FALSE}
 
-# parameter.file <- "parameters/malaria.yaml"
+parameter.file <- "parameters/malaria.yaml"
 parameter.file <- "parameters/tuberculosis.yaml"
 
 parameters <- yaml::read_yaml(parameter.file)
