--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -1468,40 +1468,51 @@ where S is a sequence segment of the same length of M, M is the PSSM, and B is t
 
 if (parameters$RSAT$rest) {
   
-  #### RSAT variation-info ####
-  # Create the vector of SOIs
-  SOI.string <- paste(collapse = ",", SOIs$refsnp_id)
-  # SOI.string <- paste(collapse = ",", SOIs$refsnp_id[1:100]) # FOR DEBUGGING
   
-  ## Submit a query to variation-info via the REST interface
-  message("\tRetrieving information on ", length(SOIs$refsnp_id), " variants from RSAT REST Web services")
-  varInfo.time <- system.time(
-    varInfo <- POST(file.path(parameters$RSAT$rest.root, "variation-info", "Homo_sapiens", "GRCh38"),
-                    body = list(i_string = SOI.string,
-                                i_string_type = 'text'))
-  )
-  # View(varInfo)
-  message("\tElapsed time to get variation-info results from RSAT REST: ", 
-          signif(digits=3, varInfo.time["elapsed"]), "s")
-  
-  ## Extract the content from the REST response
-  varInfo.content <- httr::content(varInfo, as = "text", encoding = "UTF-8")
-  # class(varInfo.content)
-  
-  ## Parse the JSON content
-  varinfo.fromJSON <- fromJSON(varInfo.content)
-  # names(varinfo.fromJSON)
-  varInfo.URL <- varinfo.fromJSON$result_url
-  varInfo.server.path <- varinfo.fromJSON$result_path
-  
-  ## Download variation info result and store it to a local file
+  ## Specify the file to download variation info result and store it to a local file
   outfiles["RSAT variation-info (varBed)"] <- file.path(
     result.dir.path["RSAT"],
     paste(sep = "", parameters$query$ID, "_SOIs_info", ".varbed"))
-  download.file(url = varInfo.URL, destfile = outfiles["RSAT variation-info (varBed)"])
-  message("\tRSAT variation-info result saved to file\n\t", 
-          outfiles["RSAT variation-info (varBed)"])
-  # system(paste("open", result.dir.path["RSAT"]))
+
+  #### RSAT variation-info ####
+  varInfo <- RsatVariationInfoRest(
+    query = SOIs$refsnp_id, 
+    queryType = "text", 
+    format = "id",
+    species = parameters$RSAT$species, 
+    assembly = parameters$RSAT$assembly, 
+    outFile = outfiles["RSAT variation-info (varBed)"])
+  
+  # # Create the vector of SOIs
+  # SOI.string <- paste(collapse = ",", SOIs$refsnp_id)
+  # # SOI.string <- paste(collapse = ",", SOIs$refsnp_id[1:100]) # FOR DEBUGGING
+  # 
+  # ## Submit a query to variation-info via the REST interface
+  # message("\tRetrieving information on ", length(SOIs$refsnp_id), " variants from RSAT REST Web services")
+  # varInfo.time <- system.time(
+  #   varInfo <- POST(file.path(parameters$RSAT$rest.root, "variation-info", "Homo_sapiens", "GRCh38"),
+  #                   body = list(i_string = SOI.string,
+  #                               i_string_type = 'text'))
+  # )
+  # View(varInfo)
+  
+  message("\tElapsed time to get variation-info results from RSAT REST: ", 
+          signif(digits=3, varInfo$time["elapsed"]), "s")
+  
+  # ## Extract the content from the REST response
+  # varInfo.content <- httr::content(varInfo, as = "text", encoding = "UTF-8")
+  # # class(varInfo.content)
+  # 
+  # ## Parse the JSON content
+  # varinfo.fromJSON <- fromJSON(varInfo.content)
+  # # names(varinfo.fromJSON)
+  # varInfo.URL <- varinfo.fromJSON$result_url
+  # varInfo.server.path <- varinfo.fromJSON$result_path
+  # 
+  # download.file(url = varInfo.URL, destfile = outfiles["RSAT variation-info (varBed)"])
+  # message("\tRSAT variation-info result saved to file\n\t", 
+  #         outfiles["RSAT variation-info (varBed)"])
+  # # system(paste("open", result.dir.path["RSAT"]))
   
   #### RSAT variation-seq ####s
   
@@ -1509,7 +1520,7 @@ if (parameters$RSAT$rest) {
   message("\n\tRetrieving the sequences surrounding variants from RSAT REST Web services")
   varSeq.time <- system.time( 
     varSeq <- POST(file.path(parameters$RSAT$rest.root, "retrieve-variation-seq", "Homo_sapiens", "GRCh38"),
-                   body = list(i_string = varInfo.server.path,
+                   body = list(i_string = varInfo$server.path,
                                i_string_type = 'piping'))
   )
   message("\tElapsed time to get variation sequences from RSAT REST: ", 
@@ -1538,17 +1549,18 @@ if (parameters$RSAT$rest) {
   ## Build the API request for Variation-scan and submit it
   message("\n\tScanning variant alleles with motifs via RSAT REST services")
   varScan.time <- system.time(
-    varscan <- POST(file.path(parameters$RSAT$rest.root, "variation-scan", "Homo_sapiens", "GRCh38"),
-                    body = list(
-                      i_string = varSeq.server.path,
-                      i_string_type = 'piping',
-                      m_string = parameters$jaspar$motifDB.URL,
-                      m_string_type = "url",
-                      m_format =  "transfac"),
-                      top_matrices = 1000,
-                    uth_pval = parameters$RSAT$varscan.pval,
-                    lth_pval_ratio = parameters$RSAT$varscan.pval.ratio,
-                    add_headers("Accept" = "application/json"))
+    varscan <- POST(
+      file.path(parameters$RSAT$rest.root, "variation-scan", "Homo_sapiens", "GRCh38"),
+      body = list(
+        i_string = varSeq.server.path,
+        i_string_type = 'piping',
+        m_string = parameters$jaspar$motifDB.URL,
+        m_string_type = "url",
+        m_format =  "transfac",
+        top_matrices = 1000,
+        uth_pval = parameters$RSAT$varscan.pval,
+        lth_pval_ratio = parameters$RSAT$varscan.pval.ratio),
+      add_headers("Accept" = "application/json"))
     #                add_headers("Accept" = "text/plain"))
   )
   
