fixed bug with LoadLibraries() call

--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -219,7 +219,7 @@ for (file in R.files) {
 
 ```{r libraries, include=FALSE,  eval=TRUE, echo=FALSE, warning=FALSE}
 
-LoadLibraries(install.if.required = TRUE))
+LoadLibraries(install.if.required = TRUE)
 
 ```
 
