temporarily inactivated the installation of ReMapEnrich to avoid system-wise dependency to libraries for RMySQL

--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -219,7 +219,8 @@ for (file in R.files) {
 
 ```{r libraries, include=FALSE,  eval=TRUE, echo=FALSE, warning=FALSE}
 
-LoadLibraries(install.if.required = TRUE)
+LoadLibraries(github.libraries.to.install = NULL, 
+              install.if.required = TRUE)
 
 ```
 
