Fixed bug in Loadlibraries function

--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -221,8 +221,7 @@ for (file in R.files) {
 
 ```{r libraries, include=FALSE,  eval=TRUE, echo=FALSE, warning=FALSE}
 
-LoadLibraries(github.libraries.to.install = NULL, 
-              install.if.required = TRUE)
+LoadLibraries(install.if.required = TRUE)
 
 ```
 
