--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -5,11 +5,6 @@ author: 'Yvon Mbouamboua, Pascal Rihet, Thi-Thuy-Nga Nguyen, Andrew Parton, Aziz
 date: "`r Sys.Date()`"
 always_allow_html: yes
 output:
-  pdf_document:
-    fig_caption: yes
-    highlight: zenburn
-    toc: yes
-    toc_depth: 3
   html_document:
     code_folding: hide
     fig_caption: yes
@@ -19,6 +14,11 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
+  pdf_document:
+    fig_caption: yes
+    highlight: zenburn
+    toc: yes
+    toc_depth: 3
   ioslides_presentation:
     colortheme: dolphin
     fig_caption: yes
@@ -84,8 +84,8 @@ ptm <- proc.time()
 ```{r parameters, echo=FALSE, results=FALSE, warning=FALSE, message=FALSE}
 
 ## Specify a YAML file containing the parameters
-parameter.file <- "parameters/malaria.yaml"
-#parameter.file <- "parameters/tuberculosis.yaml"
+#parameter.file <- "parameters/malaria.yaml"
+parameter.file <- "parameters/tuberculosis.yaml"
 #parameter.file <- "parameters/sepsis.yaml"
 
 
@@ -646,6 +646,7 @@ DA.snpInfo <- getBM(
 # Removing the duplicated information
 DA.snpInfo <- DA.snpInfo[!duplicated(DA.snpInfo$refsnp_id),]
 # View(DA.snpInfo)
+#dim(DA.snpInfo)
 
 ## Select valid SNP IDs, i.e. those for which we could get information from BioMart
 valid.DA.snp.ID <- DA.snpInfo$refsnp_id
@@ -657,22 +658,41 @@ workflowSummary["valid rsIDs for BioMart"] <- nb.valid.DA.snp.ID
 
 ```
 
+
+
 ```{r manhattan_plot}
 par(mfrow = c(1,2)) 
-DA.snps.meged <- as.data.frame(merge(x = gwas.results,
-                                    y = DA.snpInfo,
-                                    by.x = "SNPS",
-                                    by.y = "refsnp_id",
-                                    all.x = TRUE,
-                                    all.y = FALSE))
-# View(DA.snps.meged)
+
+## Ckecking and select the valid SNPs rsID from GWAS catalog
+check.valid.snps <- merge(x = studiesPerSNP,
+                    y = DA.snpInfo,
+                    by.x = "SNP",
+                    by.y = "refsnp_id",
+                    all.x = FALSE,
+                    all.y = TRUE)
+
+## Merging the valid SNP table by the GWAS results table by out invalid SNPs
+valid.snps <- merge(x = check.valid.snps,
+                       y = gwas.results,
+                       by.x = "SNP",
+                       by.y = "SNPS",
+                       all.x = TRUE,
+                       all.y = FALSE)
+
+## Remove the duplicated rsID
+valid.snps <- valid.snps[!duplicated(valid.snps$SNP),]
+
+#View(valid.snps)
+#dim(valid.snps)
 
 ## Select a subset data for manhattan plot
-gwas.manhattan <- data.frame(SNP = DA.snps.meged$SNPS,
-                             CHR = DA.snps.meged$chr_name,
-                             P = DA.snps.meged$P.VALUE)
-gwas.manhattan$BP <-  seq(DA.snps.meged$SNPS)
+gwas.manhattan <- data.frame(SNP = valid.snps$SNP,
+                             CHR = valid.snps$chr_name,
+                             P = valid.snps$P.VALUE)
+gwas.manhattan$BP <-  seq(valid.snps$SNP)
 gwas.manhattan$CHR <- as.numeric(sort(gwas.manhattan$CHR))
+
+#View(gwas.manhattan)
 
 ## Draw a manhattan plot for disease-associated SNPs
 manhattan(gwas.manhattan, 
@@ -690,15 +710,16 @@ par(mfrow = c(1,1))
 
 
 
-```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),"**. **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="100%", fig.width=8, fig.height=6}
+```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),"**. (A) Disease-associated SNPs per chromosome. (B) Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="100%", fig.width=8, fig.height=6}
 
 par(mfrow = c(1,2)) 
+
 #par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 8, 9.1, 1.1))
 ## Draw a barplot with the number of disease-associated SNPs per chromosome
-barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE), 
+barplot(height = sort(table(valid.snps$chr_name), decreasing = FALSE),
         #main = "Disease-associated SNPs per chromosome",
-        main = "A",
+        #main = "A",
         xlab = "SNPs",
         ylab = "Chromosomes",
         cex.axis = 1,
@@ -707,21 +728,23 @@ barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE),
         col = "#BBDDFF",
         cex.names = 1, 
         las = 1)
+#box()
 
-df <- sort(table(tagSNPsInfo$CONTEXT),  decreasing = FALSE)
+df <- sort(table(valid.snps$CONTEXT),  decreasing = FALSE)
 max.context <- length(df)
 x <- barplot(height = df,
         #main = "Disease-associated SNPs per chromosome",
         xlim = c(0, max(df)*1.5),
         cex.axis = 1,
-        main = "B",
+        #main = "B",
          xlab = "SNPs",
         cex.lab = 1,
         horiz = TRUE, 
-        col = "#DBDDFF",
+        col = rainbow(length(unique(valid.snps$CONTEXT))),
         cex.names = 1, 
         las = 1)
 text(x = df[1:max.context], y = x, labels = df[1:max.context], cex = 1, pos = 4)
+
 #par(par.ori)
 
 par(mfrow = c(1,1)) 
@@ -1048,7 +1071,7 @@ write.table(x = SOIs,
 
 
 
-```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic features of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
+```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic features of the SNPs of Interest (SOIs)** (A) Number of the SOIs per chromosome. (B) Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
 par(mfrow = c(2,2)) 
 par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 5.1, 3.1, 2.1))
@@ -2401,7 +2424,7 @@ if (nrow(rSNPs.info) == 0) {
 
 
 
-```{r varscan_results, out.width = "100%", fig.width=8, fig.height=4, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Heatmap of the scanning of the SOIs with motifs using *variation-scan*.** **A. ** P-value of the best putative site. **B. **  Ratio between worst and best P-value. ")}
+```{r varscan_results, out.width = "100%", fig.width=8, fig.height=4, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Heatmap of the scanning of the SOIs with motifs using *variation-scan*.** (A) P-value of the best putative site. (B)  Ratio between worst and best P-value. ")}
 
 if (nrow(rSNPs.info) == 0) {
   message("The merging between RSAT variation-scan and ReMap ChIP-seq peaks did not return a single predicted rSNP. Skipping figure. ")
@@ -2524,7 +2547,7 @@ if (nrow(rSNPs.info) == 0) {
 
 
 
-```{r rsnp_tf_gene_tissue, out.width = "100%", fig.width=8, fig.height=7, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". **A. ** Predicted rSNPs and the corresponding TFs whose DNA binding sites are affected. **B. **Predicted TFs across representative tissue/cell types as reported by ReMap catalog. **C. ** rSNPs and associated genes.**")}
+```{r rsnp_tf_gene_tissue, out.width = "100%", fig.width=8, fig.height=7, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". (A) Predicted rSNPs and the corresponding TFs whose DNA binding sites are affected. (B)Predicted TFs across representative tissue/cell types as reported by ReMap catalog. (C) rSNPs and associated genes.**")}
 
 ## rSNPs and associated TFs
 if (nrow(varscan.with.peaks) == 0) {
